--- a/default.conf
+++ b/default.conf
@@ -20,9 +20,14 @@ server {
   add_header 'X-XSS-Protection' '1; mode=block';
 
   location / {
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
         proxy_pass http://APP_HOST:APP_PORT/;
   }
 
